# health_dash

./: .gitignore  README.md  app.py  flake.nix  justfile  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
backend/: __init__.py  app_factory.py  config.py  http.py
backend/routes/: __init__.py  health.py  journal.py  meals.py  pages.py  weights.py  workouts.py
backend/services/: __init__.py  data_service.py  journal_service.py
backend/storage/: __init__.py  json_repository.py
data/: meal_data.json  weight_data.json  workout_data.json
data/journal/: 2026-01-03-214021-63175.md  2026-02-03-211411-102301.md  2026-02-08-200742-99810.md  2026-02-14-224509-450001.md  2026-02-19-210233-560032.md  2026-02-24-203558-771999.md  2026-02-28-211844-120450.md  2026-03-03-205501-904433.md  2026-03-06-214027-631750.md
docs/: agentic-showcase.md  architecture.md
docs/api/: openapi.yaml
docs/plans/: 2026-03-06-agentic-refactor-retro.md  2026-03-06-agentic-refactor-showcase.md  2026-03-06-dashboard-layout-design.md
src/: app.ts  diet.ts  journal.ts  shared.ts  weights.ts  workouts.ts
src/api/: client.ts  types.ts
src/lib/: summary.ts  time.ts
static/css/: components.css  style.css  tokens.css  utilities.css
static/js/: app.js
templates/: diet.html  index.html  journal.html
tests/api/: test_app_factory.py  test_healthcheck.py  test_request_validation.py
tests/contracts/: test_openapi_examples.py
tests/e2e/: smoke.spec.ts
tests/storage/: test_json_repository.py
