[project]
name = "health-dash"
version = "0.1.0"
description = "Simple health tracking dashboard for logging weight entries"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "markdown>=3.5",
    "bleach>=6.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
